added colab + fixed styling

--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
 		</div>
 		
 		<div style="width: 72%; float: left;overflow: auto;">
-			<script src="https://gist.github.com/HaripriyaMehta/f9403a041cd14ca145dc15619faf3ec0.js"></script>
+			<script src="https://gist.github.com/ksitu0/1bb09c6c4e1ae5640709f82708934c97.js"></script>
 		</div>
 		
-		<div style="width: 25%; float: right;overflow: auto; padding-top: 40px;">
-			<p style="font-size:24px; font-family:'Roboto'; color:#1F3A7B">View Our Model Predictions</p>
+		<div style="width: 25%; float: right;overflow: auto; padding-top: 40px;" class="pred">
+			<p style="font-size:24px; font-family:'Roboto'; color:#1F3A7B">View Our Decision Tree Predictions</p>
+			<button onclick="location.href='https://github.com/ksitu0/creditcard'" type="button">More Models</button> 
 		</div>
 	</div>
 </body>  
